--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -14,8 +14,8 @@ jobs:
         uses: actions/setup-go@v2
       - name: Check Go version
         run: go version
-      - name: Build Windows
-        run: build ./cmd/certlist
+      - name: Build for Windows
+        run: go build ./cmd/certlist
       - name: Get Latest MariaDB
         run: go run ./cmd/mdownload
       - name: Pack release
