--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -18,8 +18,10 @@ jobs:
         run: go build ./cmd/certlist
       - name: Get Latest MariaDB
         run: go run ./cmd/mdownload
+      - name: Copy config.yaml
+        run: Copy-Item -Path "cmd\certlist\config.yaml" -Destination ".\config.yaml" -Force
       - name: Pack release
-        run: Compress-Archive -Path certlist.exe,mariadb-latest.zip -DestinationPath certlist_windows.zip
+        run: Compress-Archive -Path certlist.exe,mariadb-latest.zip,config.yaml -DestinationPath certlist_windows.zip
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
